<resources>

    <!--Used for UI-->
    <string name="app_name">Fussroll</string>
    <string name="register">Continue</string>
    <string name="logo">Fussroll\'s logo</string>
    <string name="askMobile">What is your phone number?</string>
    <string name="verify">Verify</string>
    <string name="SMSCharges">SMS charges may apply</string>
    <string name="requireValid">Require valid number</string>
    <string name="require10D">Require 10 digits</string>
    <string name="serversDown">Server is down currently, we will comeback soon.</string>
    <string name="verifying">Verifying&#x2E;&#x2E;&#x2E;</string>
    <string name="badRequest">Please choose valid option and try again.</string>
    <string name="serverError">Server error occurred, please try again after sometime.</string>
    <string name="next">Next</string>
    <string name="registering">Registering&#x2E;&#x2E;&#x2E;</string>
    <string name="nine">00:09</string>
    <string name="eight">00:08</string>
    <string name="seven">00:07</string>
    <string name="six">00:06</string>
    <string name="five">00:05</string>
    <string name="four">00:04</string>
    <string name="three">00:03</string>
    <string name="two">00:02</string>
    <string name="one">00:01</string>
    <string name="zero">00:00</string>
    <string name="zeroColon">00:</string>
    <string name="tryAgain">Please re-check the OTP and try again.</string>
    <string name="validOTP">Require 6 digit OTP</string>
    <string name="resend">Resend</string>
    <string name="verification">Verification</string>
    <string name="enterOTP">Enter the 6 digit OTP which you will be receiving shortly via an SMS</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="iconLogDescription">Icon related to log</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="notConnected">Please make sure if you are connected to the internet.</string>
    <string name="verifyAgain">It seems your phone number is used on some other device running Fussroll. Please verify your phone number again on this device.</string>
    <string name="couldNotProcess">Sorry we could not process your request. Please try again with valid information.</string>
    <string name="momentUpdated">Activity updated</string>
    <string name="updating">Updating&#x2E;&#x2E;&#x2E;</string>
    <string name="sixtySeconds">00:60</string>
    <string name="refresh">Refresh</string>
    <string name="invite">Invite</string>
    <string name="inviteToJoin">, check out Fussroll. Download it here, https://play.google.com/store/apps/details?id=com.fussroll.fussroll</string>
    <string name="subjectForInvitation">Invitation for joining Fussroll</string>
    <string name="inviteBoxTitle">Send invitation using</string>
    <string name="privacy">Privacy</string>
    <string name="whoCanCheckActivities">Who can check your activities?</string>
    <string name="everyone">Everyone</string>
    <string name="onlyContacts">Contacts only</string>
    <string name="save">Save</string>
    <string name="privacyUpdated">Privacy setting updated</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="delete">Delete</string>
    <string name="an_emotional_face">an emotional face</string>
    <string name="sadThings">We need to talk.</string>
    <string name="deleteFirstPoint">&#9679; All your activities will be deleted permanently</string>
    <string name="deleteSecondPoint">&#9679; Any data regarding your account will be deleted</string>
    <string name="deleteThirdPoint">&#9679; Good thing, you can register back anytime</string>
    <string name="what_was_your_phone_number">What is your phone number?</string>
    <string name="enterYourPhoneNumber">Please enter your 10-digit phone number</string>
    <string name="are_you_really_sure">Are you really sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="missYou">We will miss you.</string>
    <string name="thanksStaying">Thanks for staying</string>
    <string name="icon_related_to_the_activity">icon related to the activity</string>
    <string name="checking">Checking&#x2E;&#x2E;&#x2E;</string>
    <string name="today">Today</string>
    <string name="noActivities">No activities updated yet</string>

    <string-array name="countries">
        <item>India</item>
        <item>United States</item>
        <item>United Kingdom</item>
        <item>Canada</item>
    </string-array>

    <!--Supported Countries-->
    <string name="IN">IN (+91)</string>
    <string name="INCode">+91</string>

    <string name="US">US (+1)</string>
    <string name="USCode">+1</string>

    <string name="GB">GB (+44)</string>
    <string name="GBCode">+44</string>

    <string name="CA">CA (+1)</string>
    <string name="CACode">+1</string>

    <!--Invalid number(s)-->
    <string name="allZeros">0000000000</string>

    <!--Regex-->
    <string name="regexDigits">^[0&#x2D;9]*$</string>
    <string name="regexPhoneNumber">^(\\+?\\d{1,3}?)?\\d{10}$</string>

    <!--APIs-->
    <string name="registerAPI">http://api.fussroll.com/register</string>
    <string name="verifyOTPAPI">http://api.fussroll.com/verifyOTP</string>
    <string name="updateLogAPI">http://api.fussroll.com/updateLog</string>
    <string name="contactsAPI">http://api.fussroll.com/contacts</string>
    <string name="isUserAPI">http://api.fussroll.com/isUser</string>
    <string name="blockAPI">http://api.fussroll.com/block</string>
    <string name="deleteAPI">http://api.fussroll.com/delete</string>
    <string name="logsAPI">http://api.fussroll.com/logs</string>
    <string name="setFirebaseTokenAPI">http://api.fussroll.com/setFirebaseToken</string>
    <string name="allNotificationSetting">Notify about updates?</string>
    <string name="mute">MUTE</string>
    <string name="firstMessage">Update your activity using \'+\' button below this message</string>
    <string name="privacyPolicyMessage">Tap Continue if you accept our <a href="https://fussroll.com/legal/">Privacy Policy</a></string>
    <string name="tagLine">Share your daily activities, quickly!</string>
    <string name="chooseCountryThenInputNumber">Choose your country first and then enter your phone number for verification</string>
    <string name="explainWhyContactsPermission">We need permission for reading your contacts to connect you with people who have already registered with Fussroll.</string>
    <string name="givePermission">Give Permission</string>
    <string name="something">Something</string>

</resources>
