<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:fillViewport="true">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <include android:id="@+id/app_bar" layout="@layout/app_bar"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_below="@+id/app_bar">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:text="@string/sadThings"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="25dp"
                android:id="@+id/textView5" />

            <TextView
                android:text="@string/deleteFirstPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/textView5"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5"
                android:layout_marginTop="15dp"
                android:id="@+id/textView6" />

            <TextView
                android:text="@string/deleteSecondPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/textView6"
                android:layout_alignLeft="@+id/textView6"
                android:layout_alignStart="@+id/textView6"
                android:layout_marginTop="15dp"
                android:id="@+id/textView7" />

            <TextView
                android:text="@string/deleteThirdPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/textView7"
                android:layout_alignLeft="@+id/textView7"
                android:layout_alignStart="@+id/textView7"
                android:layout_marginTop="15dp"
                android:id="@+id/textView8" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_below="@+id/textView8"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="95dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/editText" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/what_was_your_phone_number"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:id="@+id/textView9"
        android:layout_below="@+id/cardView"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.AppCompatButton
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/red"
        android:textColor="@android:color/white"
        android:id="@+id/button"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/textInputLayout"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
</ScrollView>